[metadata]
name = quetz_client
version = attr: quetz_client._version.__version__
description = A Python client to interact with a Quetz server.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mamba-org/quetz-client
author = QuantCo, Inc.
author_email = noreply@quantco.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
install_requires =
    fire
    requests
    dacite
python_requires = >=3.8
package_dir=
    =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    quetz-client = quetz_client.cli:main
